--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -457,6 +457,7 @@ src/lib/pil/pil-testmain.c
 src/lib/pil/pil-worker.c
 src/lib/scm/scm-coverage.c
 src/lib/scm/scm-funcname.c
+src/lib/scm/scm-gettext.c
 src/lib/scm/scm-test.c
 src/lib/scm/scm-testmain.c
 src/lib/scm/scm-utils.c
