Fix doc generation

--- a/liquidwar6/doc/Makefile.am
+++ b/liquidwar6/doc/Makefile.am
@@ -67,7 +67,7 @@ pub: coverage-pub global-pub cyclo-pub doxygen-pub perf-pub manual-pub
 coverage-pub: coverage.tar.gz
 
 coverage.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
-	rm -rf coverage-tmp && mkdir coverage-tmp && cd coverage-tmp && tar -xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && pwd > pwd.txt && mkdir build && cd build && $$(cat ../pwd.txt)/configure --enable-gcov --enable-allinone && rm -f ../pwd.txt && $(MAKE) && cd doc/coverage && $(MAKE) opt && rm -f Makefile && cd .. && tar -czf coverage.tar.gz coverage && cd ../../../.. && mv coverage-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/build/doc/coverage.tar.gz . && rm -rf coverage-tmp
+	rm -rf coverage-tmp && mkdir coverage-tmp && cd coverage-tmp && tar -xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && pwd > pwd.txt && mkdir build && cd build && $$(cat ../pwd.txt)/configure --enable-gcov --enable-allinone && rm -f ../pwd.txt && $(MAKE) -C src && cd doc/coverage && $(MAKE) opt && rm -f Makefile && cd .. && tar -czf coverage.tar.gz coverage && cd ../../../.. && mv coverage-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/build/doc/coverage.tar.gz . && rm -rf coverage-tmp
 
 global-pub: global.tar.gz
 
@@ -87,7 +87,7 @@ doxygen.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 perf-pub: perf.tar.gz
 
 perf.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
-	rm -rf perf-tmp && mkdir perf-tmp && cd perf-tmp && tar -xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && ./configure --enable-profiler && $(MAKE) -C ../src/lib && cd doc/perf && $(MAKE) opt && install -d perf && cp *.pdf *.jpeg perf && tar -czf perf.tar.gz perf && cd ../../../.. && mv perf-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/doc/perf/perf.tar.gz . && rm -rf perf-tmp
+	rm -rf perf-tmp && mkdir perf-tmp && cd perf-tmp && tar -xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && ./configure --enable-profiler && $(MAKE) -C src && cd doc/perf && $(MAKE) opt && install -d perf && cp *.pdf *.jpeg perf && tar -czf perf.tar.gz perf && cd ../../../.. && mv perf-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/doc/perf/perf.tar.gz . && rm -rf perf-tmp
 
 manual-pub: manual.tar.gz
 
