Splitted jumbo hlp-reference.c file into smaller files to speed up build

--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -251,7 +251,27 @@ src/lib/hlp/hlp-keyword.c
 src/lib/hlp/hlp-list.c
 src/lib/hlp/hlp-options.c
 src/lib/hlp/hlp-print.c
-src/lib/hlp/hlp-reference.c
+src/lib/hlp/hlp-refadvanced.c
+src/lib/hlp/hlp-refaliases.c
+src/lib/hlp/hlp-ref.c
+src/lib/hlp/hlp-refdoc.c
+src/lib/hlp/hlp-reffuncs.c
+src/lib/hlp/hlp-refgraphics.c
+src/lib/hlp/hlp-refhooks.c
+src/lib/hlp/hlp-refinput.c
+src/lib/hlp/hlp-refmap.c
+src/lib/hlp/hlp-refmaphints.c
+src/lib/hlp/hlp-refmaprules.c
+src/lib/hlp/hlp-refmapstyle.c
+src/lib/hlp/hlp-refmapteams.c
+src/lib/hlp/hlp-refnetwork.c
+src/lib/hlp/hlp-refpath.c
+src/lib/hlp/hlp-refplayers.c
+src/lib/hlp/hlp-refquick.c
+src/lib/hlp/hlp-refshow.c
+src/lib/hlp/hlp-refsound.c
+src/lib/hlp/hlp-refteamcolors.c
+src/lib/hlp/hlp-refweapons.c
 src/lib/hlp/hlp-test.c
 src/lib/hlp/hlp-testmain.c
 src/lib/img/img-repr.c
