Added amd64 detection and implemented test_and_set for this platform, dunno why pthreads aren't used anyway :(

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -211,6 +211,17 @@ if test x${lw6_x86} = xyes ; then
    LW6_X86_CFLAGS="-DLW6_X86=1"
 fi
 
+lw6_amd64=no
+if test ${host_cpu} = amd64 || test ${host_cpu} = x86_64 ; then
+   lw6_amd64=yes
+fi
+
+AM_CONDITIONAL(LW6_AMD64, test x${lw6_amd64} = xyes)
+LW6_AMD64_CFLAGS=
+if test x${lw6_amd64} = xyes ; then
+   LW6_AMD64_CFLAGS="-DLW6_AMD64=1"
+fi
+
 AM_CONDITIONAL(LW6_UNIX, test x${lw6_unix} = xyes)
 
 dnl For debugging and profiling
@@ -946,7 +957,7 @@ fi
 AC_SUBST(LW6_CPU_CFLAGS)
 AC_SUBST(LW6_CPU_LDFLAGS)
 
-LW6_CFLAGS="-Wall ${LW6_X86_CFLAGS} ${ALLINONE_CFLAGS} ${FULLSTATIC_CFLAGS} ${OPENMP_CFLAGS} ${OPTIMIZE_CFLAGS} ${PARANOID_CFLAGS} ${GPROF_CFLAGS} ${INSTRUMENT_CFLAGS} ${PROFILER_CFLAGS} ${GCOV_CFLAGS} ${VALGRIND_CFLAGS} ${LW6_GNU_CFLAGS} ${LW6_UNIX_CFLAGS} ${LW6_MS_WINDOWS_CFLAGS} ${LW6_MAC_OS_X_CFLAGS} ${LW6_GP2X_CFLAGS} ${LW6_CPU_CFLAGS} ${LW6_CUNIT_CFLAGS}"
+LW6_CFLAGS="-Wall ${LW6_X86_CFLAGS} ${LW6_AMD64_CFLAGS} ${ALLINONE_CFLAGS} ${FULLSTATIC_CFLAGS} ${OPENMP_CFLAGS} ${OPTIMIZE_CFLAGS} ${PARANOID_CFLAGS} ${GPROF_CFLAGS} ${INSTRUMENT_CFLAGS} ${PROFILER_CFLAGS} ${GCOV_CFLAGS} ${VALGRIND_CFLAGS} ${LW6_GNU_CFLAGS} ${LW6_UNIX_CFLAGS} ${LW6_MS_WINDOWS_CFLAGS} ${LW6_MAC_OS_X_CFLAGS} ${LW6_GP2X_CFLAGS} ${LW6_CPU_CFLAGS} ${LW6_CUNIT_CFLAGS}"
 LW6_LDFLAGS="${ALLINONE_LDFLAGS} ${FULLSTATIC_LDFLAGS} ${OPENMP_LDFLAGS} ${GPROF_LDFLAGS} ${INSTRUMENT_LDFLAGS} ${PROFILER_LDFLAGS} ${LW6_LIBINTL_LDFLAGS} ${LW6_OS_LDFLAGS} ${LW6_CPU_LDFLAGS} ${LW6_CUNIT_LDFLAGS}"
 AC_SUBST(LW6_CFLAGS)
 AC_SUBST(LW6_LDFLAGS)
@@ -1139,6 +1150,11 @@ if test -z "${LW6_X86_TRUE}"; then
 	AC_MSG_NOTICE([X86 support... yes])
 else
 	AC_MSG_NOTICE([X86 support... no])
+fi
+if test -z "${LW6_AMD64_TRUE}"; then
+	AC_MSG_NOTICE([AMD64 support... yes])
+else
+	AC_MSG_NOTICE([AMD64 support... no])
 fi
 if test -z "${LW6_CUNIT_TRUE}"; then
 	AC_MSG_NOTICE([enable cunit... yes])
