--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -552,6 +552,7 @@ src/lib/sys/sys-backtrace.c
 src/lib/sys/sys-bazooka.c
 src/lib/sys/sys-build.c
 src/lib/sys/sys-cache.c
+src/lib/sys/sys-callerinfo.c
 src/lib/sys/sys-checksum.c
 src/lib/sys/sys-color.c
 src/lib/sys/sys-context.c
